<resources>
    <string name="app_name">Vision Share</string>
    <string name="title_home">Home</string>
    <string name="title_trending">Dashboard</string>
    <string name="title_news">Notifications</string>
    <string name="title_submission">Submission</string>
    <string name="title_my_account">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
