<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_submission"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/title_submission"/>

    <item
        android:id="@+id/navigation_my_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_my_account" />

</menu>
